css/style.css
@font-face{
    
    font-style:normal;
    font-family:alef;
    src:url(https://github.com/idoivri/airpollution/raw/gh-pages/dist/fonts/Alef-Regular.eot);
    src:url(https://github.com/idoivri/airpollution/raw/gh-pages/dist/fonts/Alef-Regular.eot#iefix) format(embedded-opentype),
        url(https://github.com/idoivri/airpollution/raw/gh-pages/dist/fonts/Alef-Regular.woff) format(woff),
        url(https://github.com/idoivri/airpollution/raw/gh-pages/dist/fonts/Alef-Regular.svg) format(truetype),
        url(https://github.com/idoivri/airpollution/raw/gh-pages/dist/fonts/opensans-light-webfont.svg#open_sanslight) format(svg)
}

body {
    padding: 0;
    margin: 0;
}

#header-wrap {
    background: #000000;
    position: fixed;
    width: 100%;
    top: 0;
    z-index: 1;
    text-align: center;
    color: #ffffff;
}

html, body, #map {
	direction: rtl;
    height: 100%;
    font-family: Alef;
    
}

#opener {
    margin-right: 10px; 
}

.leaflet-popup-content {
	direction: rtl;
	text-align: right;
    font-family: Alef;
}

.leaflet-control {
    direction: rtl;
}

/***

Floating Message Box

***/

#hide-me ~ label {
  position: absolute;
  display: flex;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background: rgba(0,0,0,.5);
  background: radial-gradient(ellipse at center, rgba(0,0,0,.2) 0%, rgba(0,0,0,.9) 150%);
} 
#hide-me ~ label > .message {
  position: relative;
  margin: auto;
  width: 60%;
  height: 60%;
  background: #F7F9F3;
  padding: 2.5em;
  font-size: 1.25em;
  box-shadow: 0 5px 30px 5px #222;
  overflow:scroll; 
}

#hide-me ~ label .close {
  display: block;
  position: absolute;
  top: 5px;
  right: 5px;
  bottom: 0px;
  color: #eee;
  background: #C00;
  padding: 3px;
  border-radius: 2em;
  width: 1.2em;
  height: 1.2em;
  text-align: center;
  cursor: pointer;
}
#hide-me {
  display: none;
}

span.msgbox-emphasis {
  font-weight: bold;
  color:green;
}

span.msgbox-emphasis-neg {
  font-weight: bold;
  color:red;
}

#hide-me[type=checkbox] ~ .content {
  -webkit-filter: blur(5px);

}
#hide-me[type=checkbox]:checked ~ label {
  display: none;
}
#hide-me[type=checkbox]:checked ~ .content {
  -webkit-filter: none;
  max-height: 400px;
}

/** begin: debugging tool 
    This positions the checkbox that powers this effect in the upper right-hand corner. To redisplay the popup box, uncheck the box.
**/
#hide-me {
  position: absolute;
  top: 10px;
  right: 10px;
  display: block;
}
/** end: bebugging tool **/

/** begin: content styles **/
article {
  width: 960px;
  margin: 1em auto;
}

#lipsum {
  column-count: 2;
}
/** end: content styles **/

